<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.home.HomeFragment">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/currentPuyoLayout"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:columnCount="7"
        app:rowCount="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/nextPuyoLayout"
        android:layout_width="32dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:columnCount="2"
        app:rowCount="4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/currentPuyoLayout">
    </androidx.gridlayout.widget.GridLayout>


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/utilityLayout"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        app:columnCount="2"
        app:layout_constraintStart_toEndOf="@id/fieldLayout"
        app:layout_constraintBottom_toBottomOf="@id/fieldLayout"
        app:rowCount="2">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/save"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/buttonLoad"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/load"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/buttonUndo"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/undo"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/buttonRedo"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/redo"
            app:layout_column="1"
            app:layout_row="1" />

    </androidx.gridlayout.widget.GridLayout>


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/fieldLayout"
        android:layout_width="128dp"
        android:layout_height="224dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:columnCount="8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentPuyoLayout"
        app:rowCount="14">
    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:id="@+id/currentSeedLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pointLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/nextPuyoLayout"
        app:layout_constraintStart_toEndOf="@id/nextPuyoLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chainInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/chainPointTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/gamePointTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/chainNumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextSeed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/gamePadUpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/left_cursor"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonRight"
            android:layout_marginStart="20dp"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/right_cursor"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonA"
            android:layout_marginStart="50dp"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/a"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rotationButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintTop_toBottomOf="@id/editTextSeed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cursorLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="55dp"
            android:text="@string/down_cursor"
            tools:ignore="ButtonStyle" />


        <Button
            android:id="@+id/buttonB"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="50dp"
            android:text="@string/b"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
    </LinearLayout>


<EditText
        android:id="@+id/editTextSeed"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:inputType="numberSigned"
        android:hint="@string/seed_hint"
        app:layout_constraintTop_toBottomOf="@id/fieldLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no">
    </EditText>

    <Button
        android:id="@+id/buttonSetSeed"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/set_seed"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        tools:layout_editor_absoluteX="139dp"
        app:layout_constraintTop_toBottomOf="@id/fieldLayout"
        app:layout_constraintStart_toEndOf="@id/editTextSeed">
    </Button>

    <Button
        android:id="@+id/buttonRestart"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/restart"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        tools:layout_editor_absoluteX="139dp"
        app:layout_constraintTop_toBottomOf="@id/fieldLayout"
        app:layout_constraintStart_toEndOf="@id/buttonSetSeed">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>